--- a/.github/workflows/generate-pages.yml
+++ b/.github/workflows/generate-pages.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: 20.x
           cache: 'npm'
       - run: npm ci
+      - name: merge from master
+        run: git merge master
       - run: npm run generate
       - name: git setting
         run: |
