--- a/.github/workflows/generate-pages.yml
+++ b/.github/workflows/generate-pages.yml
@@ -5,13 +5,14 @@ on:
     branches: [ "master" ]
     
 jobs:
-  generate-doc:
+  generate-pages:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with: 
+          fetch-depth: 0
           ref: 'gh-pages'
       - name: Use Node.js 20.x
         uses: actions/setup-node@v3
