--- a/.github/workflows/generate-pages.yml
+++ b/.github/workflows/generate-pages.yml
@@ -26,7 +26,8 @@ jobs:
           git config --local user.name "${{ vars.PAGES_AUTO_GENERATOR_GIT_USER_NAME }}"
       - name: merge from origin/master
         run: git merge -X theirs origin/master
-      - run: npm run generate
+      - name: generate pages
+        run: npm run generate
       - name: Commit files
         run: |
           git add ./dist
