--- a/.github/workflows/generate-pages.yml
+++ b/.github/workflows/generate-pages.yml
@@ -26,13 +26,19 @@ jobs:
           git config --local user.name "${{ vars.PAGES_AUTO_GENERATOR_GIT_USER_NAME }}"
       - name: merge from origin/master
         run: git merge -X theirs origin/master
+      - name: Push merged files
+        run: |
+          git pull
+          git push origin gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: generate pages
         run: npm run generate
       - name: Commit files
         run: |
           git add ./dist
           git commit -m "auto: generate pages" -a
-      - name: Push files
+      - name: Push pages
         run: |
           git pull
           git push origin gh-pages
