--- a/.github/workflows/generate-pages.yml
+++ b/.github/workflows/generate-pages.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           node-version: 20.x
           cache: 'npm'
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
       - name: git setting
         run: |
           git config --local user.email "${{ vars.PAGES_AUTO_GENERATOR_GIT_USER_EMAIL }}"
